--- a/src/styles/partials/_base.css
+++ b/src/styles/partials/_base.css
@@ -14,6 +14,14 @@ a {
 	}
 }
 
+.h-screen-no-header {
+	height: calc(100vh - 105px);
+
+	@screen md {
+		height: calc(100vh - 125px);
+	}
+}
+
 html.has-scroll-smooth {
 	overflow: hidden;
 }
