started integrating Dato

--- a/src/styles/partials/_typography.css
+++ b/src/styles/partials/_typography.css
@@ -77,3 +77,11 @@ button {
 .text-orient-down {
   writing-mode: vertical-rl;
 }
+
+.content-indented {
+  > p {
+    &:before {
+      content: "\a0\a0\a0\a0\a0\a0\a0\a0\a0"
+    }
+  }
+}
