--- a/src/styles/partials/_base.css
+++ b/src/styles/partials/_base.css
@@ -147,6 +147,8 @@ html.has-scroll-dragging {
 }
   
 .slide {
+	align-items: center;
+  	justify-content: center;
 	/* width: 90vw; */
 	margin-right: 4vw;
 	/* height: 90vh; */
@@ -162,29 +164,45 @@ html.has-scroll-dragging {
 		margin-right: 6vw;
 	}
 
+	.slide__img {
+		transition: all ease 750ms;
+	}
+
 	.slide__link {
 		@screen md {
-			transition: all ease 550ms;
-
 			&:hover {
-				transform: scale(1.075);
+				.slide__img {
+					transform: scale(1.1);
+				}
 			}
 		}
 	}
 }
 
+.slider {
+	animation: fadeIn 0.66s ease-out 0.45s forwards;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .carousel-img {
 	max-width: none !important;
-	max-height: 80vw !important;
+	/* max-height: 80vw !important; */
 	height: 100%;
 
 	@screen md {
-		max-height: 23vw !important;
+		/* max-height: 23vw !important; */
 	}
 }
 
 .flickity-viewport {
 	@apply overflow-visible !important;
 }
+.flickity-slider {
+	@apply flex flex-wrap items-center;
+}
 
-.flickity-enabled{position:relative}.flickity-enabled:focus{outline:0}.flickity-viewport{overflow:hidden;position:relative;height:100%}.flickity-slider{position:absolute;width:100%;height:100%}.flickity-enabled.is-draggable{-webkit-tap-highlight-color:transparent;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flickity-enabled.is-draggable .flickity-viewport{cursor:move;cursor:-webkit-grab;cursor:grab}.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down{cursor:-webkit-grabbing;cursor:grabbing}.flickity-button{position:absolute;background:hsla(0,0%,100%,.75);border:none;color:#333}.flickity-button:hover{background:#fff;cursor:pointer}.flickity-button:focus{outline:0;box-shadow:0 0 0 5px #19f}.flickity-button:active{opacity:.6}.flickity-button:disabled{opacity:.3;cursor:auto;pointer-events:none}.flickity-button-icon{fill:currentColor}.flickity-prev-next-button{top:50%;width:44px;height:44px;border-radius:50%;transform:translateY(-50%)}.flickity-prev-next-button.previous{left:10px}.flickity-prev-next-button.next{right:10px}.flickity-rtl .flickity-prev-next-button.previous{left:auto;right:10px}.flickity-rtl .flickity-prev-next-button.next{right:auto;left:10px}.flickity-prev-next-button .flickity-button-icon{position:absolute;left:20%;top:20%;width:60%;height:60%}.flickity-page-dots{position:absolute;width:100%;bottom:-25px;padding:0;margin:0;list-style:none;text-align:center;line-height:1}.flickity-rtl .flickity-page-dots{direction:rtl}.flickity-page-dots .dot{display:inline-block;width:10px;height:10px;margin:0 8px;background:#333;border-radius:50%;opacity:.25;cursor:pointer}.flickity-page-dots .dot.is-selected{opacity:1}
+.flickity-enabled{position:relative}.flickity-enabled:focus{outline:0}.flickity-viewport{overflow:hidden;position:relative;height:100%}.flickity-slider{position:absolute;width:100%;height:100%}.flickity-enabled.is-draggable{-webkit-tap-highlight-color:transparent;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flickity-enabled.is-draggable .flickity-viewport{cursor:move;cursor:-webkit-grab;cursor:grab}.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down{cursor:-webkit-grabbing;cursor:grabbing}
