--- a/src/styles/partials/_base.css
+++ b/src/styles/partials/_base.css
@@ -285,4 +285,52 @@ video {
 	@apply flex flex-wrap items-center;
 }
 
+
+.team-member {
+	@apply relative;
+}
+
+.team-member {
+	@apply opacity-100 relative transition duration-300 ease-in-out;
+
+	&:after {
+		content: " ";
+		mix-blend-mode: multiply;
+		@apply absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-transparent z-30 opacity-0 transition duration-300 ease-in-out;
+	}
+}
+
+.team-member__image {
+	transition: all ease-in-out 300ms;
+}
+
+.team-member--active {
+	.team-member__image {
+		-webkit-filter: grayscale(100%);
+		mix-blend-mode: darken;
+		background-blend-mode: darken;
+	}
+
+	&:after {
+		content: " ";
+		@apply absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-prbred z-30 opacity-100 transition duration-300 ease-in-out;
+	}
+}
+
+.team-member--deactive {
+	@apply opacity-75;
+	
+	.team-member__image {	
+		-webkit-filter: grayscale(100%);
+		mix-blend-mode: darken;
+		background-blend-mode: darken;
+	}
+
+	&:after {
+		content: " ";
+		mix-blend-mode: none;
+		@apply absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-black z-30 opacity-50 transition duration-300 ease-in-out;
+	}
+}
+
 .flickity-enabled{position:relative}.flickity-enabled:focus{outline:0}.flickity-viewport{overflow:hidden;position:relative;height:100%}.flickity-slider{position:absolute;width:100%;height:100%}.flickity-enabled.is-draggable{-webkit-tap-highlight-color:transparent;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flickity-enabled.is-draggable .flickity-viewport{cursor:move;cursor:-webkit-grab;cursor:grab}.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down{cursor:-webkit-grabbing;cursor:grabbing}.flickity-button{display: none !important;}
