font face rule rolled back

--- a/src/styles/partials/_fonts.css
+++ b/src/styles/partials/_fonts.css
@@ -1,10 +1,10 @@
 /* IBM Mono (Sans) */
 @font-face {
   font-family: 'Founders Grotesk';
-  src: url('../fonts/FoundersGrotesk-Regular.woff') format('woff'),
-      url('../fonts/FoundersGrotesk-Regular.woff2') format('woff2')
-      local("Founders Grotesk Regular"),
-      local("FoundersGrotesk-Regular");
+  src: local("Founders Grotesk Regular"),
+        local("FoundersGrotesk-Regular")
+        url('../fonts/FoundersGrotesk-Regular.woff') format('woff'),
+        url('../fonts/FoundersGrotesk-Regular.woff2') format('woff2');
   font-display: swap;
   font-style: normal;
   unicode-range: U+000-5FF;
@@ -13,10 +13,10 @@
 
 @font-face {
   font-family: 'Founders Grotesk';
-  src: url('../fonts/FoundersGrotesk-Light.woff') format('woff'),
-      url('../fonts/FoundersGrotesk-Light.woff2') format('woff2'),
-      local("Founders Grotesk Light"),
-      local("FoundersGrotesk-Light");
+  src: local("Founders Grotesk Light"),
+        local("FoundersGrotesk-Light")
+        url('../fonts/FoundersGrotesk-Light.woff') format('woff'),
+        url('../fonts/FoundersGrotesk-Light.woff2') format('woff2'),;
   font-display: swap;
   font-style: normal;
   font-weight: 300;
@@ -25,9 +25,9 @@
 
 @font-face {
   font-family: 'Sohne';
-  src: url('../fonts/Sohne-Buch.woff') format('woff'),
-      url('../fonts/Sohne-Buch.woff2') format('woff2')
-      local("Sohne");
+  src: local("Sohne")
+        url('../fonts/Sohne-Buch.woff') format('woff'),
+        url('../fonts/Sohne-Buch.woff2') format('woff2');
   font-display: swap;
   font-style: normal;
   unicode-range: U+000-5FF;
