--- a/src/styles/partials/_typography.css
+++ b/src/styles/partials/_typography.css
@@ -34,6 +34,21 @@ h2 {
   }
 }
 
+.text-screen-display--journal {
+  @apply text-5xl;
+  line-height: 0.85;
+
+  @screen md {
+    font-size: 6.25vw;
+    line-height: 5vw;
+  }
+
+  @screen xl {
+    font-size: 6.75vw;
+    line-height: 5.25vw;
+  }
+}
+
 .text-screen-display--large {
   @apply text-7xl;
   line-height: 0.75;
